--- a/helm-chart-sources/raw/Chart.yaml
+++ b/helm-chart-sources/raw/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 description: A place for all the Kubernetes resources which don't already have a home
 name: raw
-version: v0.2.5
+version: 0.2.5
 kubeVersion: ">=1.16.0-0"
 home: https://github.com/itscontained/charts/blob/master/itscontained/raw
 keywords:
